--- a/static/pages/bg/about.html
+++ b/static/pages/bg/about.html
@@ -151,11 +151,11 @@
 
             <p class="text-sm text-center !py-[30px] xl:!pt-[50px] xl:!pb-[100px]"> Добре дошли в бъдещето. Добре дошли в OTTO.​</p>
 
-            <p class="text-xs xl:text-base  text-justify !leading-4 lg:!leading-8">"OTTO." е глобална бизнес платформа за всички в арт индустриите, предназначена да събере всички артисти и организации на едно място. Основател е Итън Стоилов, който иска да осигури легитимна и безопасна среда за всички без прояви на дискриминация. ,,OTTO.” предоставя платформа, където артисти и организации могат да рекламират себе си, и работата си навсякъде по света, по всяко време, и да се уверят, че достигат до възможно най-широка публика. </p>
+            <p class="text-xs xl:text-base  text-justify !leading-4 lg:!leading-8">"OTTO." е глобална бизнес платформа за всички в арт индустриите, предназначена да събере всички артисти и организации на едно място. Основател е Итън Стоилов, който иска да осигури легитимна и безопасна среда за всички без прояви на дискриминация. „OTTO.” предоставя платформа, където артисти и организации могат да рекламират себе си, и работата си навсякъде по света, по всяко време, и да се уверят, че достигат до възможно най-широка публика. </p>
             <p class="text-xs xl:text-base  text-justify !leading-4 lg:!leading-8">Бизнесът може да се свързва свободно с артисти и с други бизнеси в платформата. Да популяризира своите кастинги, събития, фестивали, срещи, обяви за работа за артисти и много други. </p>
 
             <p class="text-xs xl:text-base  text-justify !leading-4 lg:!leading-8">Същото е и с артистите, освен че могат да се свързват помежду си и с бизнеси в платформата, те могат и да кандидатстват за работа, кастинги, да закупуват билети за събития, да ходят на курсове, семинари, уъркшопи, да популяризират своите участия и изпълнения, да управляват своите резервации, да четат или да участват в нашия новинарен блог, в наши конкурси и много други. </p>
-            <p class="text-xs xl:text-base  text-justify !leading-4 lg:!leading-8">,,OTTO.” е бъдещето и вие вече сте тук. Насладете се.
+            <p class="text-xs xl:text-base  text-justify !leading-4 lg:!leading-8">„OTTO.” е бъдещето и вие вече сте тук. Насладете се.
             </p>
 
         </div>
@@ -167,44 +167,44 @@
     <div class="is-container container px-6 !py-[50px] xl:!py-[100px]">
         <div>
             <p class="text-lg md:text-xl xl:text-5xl text-center ">Реклама в социалните мрежи</p>
-            <p class="text-sm xl:text-xl text-center !py-[30px] xl:!pt-[50px] xl:!pb-[100px]">,,ОТТО.”осигурява реклама в следните социални мрежи:</p>
+            <p class="text-sm xl:text-xl text-center !py-[30px] xl:!pt-[50px] xl:!pb-[100px]">„ОТТО.”осигурява реклама в следните социални мрежи:</p>
         </div>
-        <div class="grid xl:grid-cols-7 grid-cols-1 sm:grid-cols-3 md:grid-cols-4 gap-6 md:gap-10  ">
+        <div class="grid xl:grid-cols-7 grid-cols-1 sm:grid-cols-3 md:grid-cols-4 gap-10  ">
             <div class="text-center px-3">
                 <i class="fa-solid fa-globe text-[42px] md:text-[62px]"></i>
                 <p class="mt-2 text-sm xl:text-lg">Уебсайт</p>
-                <p class="mt-5 text-xs xl:text-sm">Повече от 500 уникални посетители всеки месец</p>
+                <p class="mt-2 text-xs xl:text-sm">Повече от 500 уникални посетители всеки месец</p>
             </div>
             <div class="text-center px-3">
                 <i class="fa-brands fa-instagram text-[42px] md:text-[62px]"></i>
                 <p class="mt-2 text-sm xl:text-lg">Instagram</p>
-                <p class="mt-5 text-xs xl:text-sm">Повече от 200 последователи в арт индустриите</p>
+                <p class="mt-2 text-xs xl:text-sm">Повече от 200 последователи в арт индустриите</p>
             </div>
             <div class="text-center px-3">
                 <i class="fa-brands fa-facebook text-[42px] md:text-[62px]"></i>
                 <p class="mt-2 text-sm xl:text-lg">Facebook</p>
-                <p class="mt-5 text-xs xl:text-sm">Очаква се скоро </p>
+                <p class="mt-2 text-xs xl:text-sm">Очаква се скоро </p>
             </div>
             <div class="text-center px-3">
                 <i class="fa-brands fa-tiktok text-[42px] md:text-[62px]"></i>
                 <p class="mt-2 text-sm xl:text-lg">Tiktok</p>
-                <p class="mt-5 text-xs xl:text-sm">Очаква се скоро</p>
+                <p class="mt-2 text-xs xl:text-sm">Очаква се скоро</p>
             </div>
 
             <div class="text-center px-3">
                 <i class="fa-brands fa-linkedin text-[42px] md:text-[62px]"></i>
                 <p class="mt-2 text-sm xl:text-lg">LinkedIn</p>
-                <p class="mt-5 text-xs xl:text-sm">Повече от 300 контакта в арт индустриите</p>
+                <p class="mt-2 text-xs xl:text-sm">Повече от 300 контакта в арт индустриите</p>
             </div>
             <div class="text-center px-3">
                 <i class="fa-brands fa-youtube text-[42px] md:text-[62px]"></i>
                 <p class="mt-2 text-sm xl:text-lg">YouTube</p>
-                <p class="mt-5 text-xs xl:text-sm">Очаква се скоро</p>
+                <p class="mt-2 text-xs xl:text-sm">Очаква се скоро</p>
             </div>
             <div class="text-center px-3">
                 <i class="fa-brands fa-x-twitter text-[42px] md:text-[62px]"></i>
                 <p class="mt-2 text-sm xl:text-lg">X (Twitter)</p>
-                <p class="mt-5 text-xs xl:text-sm">Очаква се скоро</p>
+                <p class="mt-2 text-xs xl:text-sm">Очаква се скоро</p>
             </div>
 
         </div>
@@ -221,18 +221,18 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-10 lg:gap-5">
             <div class="px-4">
-                <p class="text-base xl:text-4xl font-semibold">Какво е ОТО?</p>
+                <p class="text-base xl:text-4xl font-semibold">Какво е „ОТТО.”?</p>
                 <p class="mt-4 text-xs lg:text-sm  text-justify">"ОТТО." е дигитална платформа, където всички артисти от всички арт индустрии могат лесно да намират работни ангажименти, да разширяват контактите си, да легитимират портфолиото си, да подобряват уменията си и да получават по-висока видимост.</p>
-                <p class="text-xs lg:text-sm  text-justify">От друга страна, платформата е насочена към организации в или извън арт индустриите, които търсят арт таланти за своите проекти или проверяват талантите чрез платформата като преглеждат оценките и коментарите оставени от предишни клиенти, с които артистите са работили.</p>
-                <p class=" text-xs lg:text-sm  text-justify">"ОТТО." е подходящ за артисти на свободна практика, които нямат контакти в индустрията.</p>
+                <p class="text-xs lg:text-sm  text-justify">От друга страна, платформата е насочена към организации в или извън арт индустриите, които търсят арт таланти за своите проекти, или проверяват талантите чрез платформата като преглеждат оценките и коментарите оставени от предишни клиенти, с които артистите са работили.</p>
+                <p class=" text-xs lg:text-sm  text-justify">„ОТТО." е подходящ за артисти на свободна практика, които нямат контакти в индустрията.</p>
             </div>
             <div class="px-4">
                 <p class="text-base xl:text-4xl font-semibold">Мисия</p>
-                <p class="mt-4 text-xs lg:text-sm  text-justify">„Мисията на „OTTO.“ е да отключи потенциала на човешкото творчество, предоставяйки на милиони талантливи художници възможността да процъфтяват чрез своето изкуство, като същевременно предлага на милиарди фенове шанса да се потопят и да се вдъхновят от тяхната работа”.</p>
+                <p class="mt-4 text-xs lg:text-sm  text-justify">„Мисията на „OTTO.“ е да отключи потенциала на човешкото творчество, предоставяйки на милиони талантливи артисти възможността да се развиват чрез своята сфера, като същевременно предлага на милиарди фенове шанса да се насладят и да се вдъхновят от тяхната работа”.</p>
             </div>
             <div class="px-4">
                 <p class="text-base xl:text-4xl font-semibold">Визия</p>
-                <p class="mt-4 text-xs lg:text-sm  text-justify"></p>
+                <p class="mt-4 text-xs lg:text-sm  text-justify">„Платформата лидер за арт сътрудничество във всички арт индустрии в цял свят, която е еталон за качество”.</p>
             </div>
             <div class="px-4">
                 <p class="text-base xl:text-4xl font-semibold">Лозунг</p>
@@ -249,7 +249,7 @@
 
             <p class="text-lg md:text-xl xl:text-5xl text-center !pb-[50px] xl:!pb-[100px]">Основател Итън Стоилов</p>
 
-            <p class="text-xs xl:text-base  text-justify !leading-4 lg:!leading-8">„Когато спрях футболната си кариера през 2022 г., реших да обърна повече внимание на образованието си. Имах мечти да стана модел и актьор, но бях отхвърлен и игнориран от модни и кастинг агенции поради различни причини. Това преживяване ме мотивира да създам платформа за всички артисти, така че никой да не бъде дискриминиран. ,,OTTO.” е безопасно място за развитие на всички в сферата на изкуството и културата. Място, на което всеки да развие потенциала си, контактите си и да бъде равноправен член на общността от таланти. От стартирането си ,,OTTO.” е платформа за сътрудничество и творчество, с широк спектър от възможности за всички видове артисти.“ – Итън Стоилов</p>
+            <p class="text-xs xl:text-base  text-justify !leading-4 lg:!leading-8">„Когато спрях футболната си кариера през 2022 г., реших да обърна повече внимание на образованието си. Имах мечти да стана модел и актьор, но бях отхвърлен и игнориран от модни и кастинг агенции поради различни причини. Това преживяване ме мотивира да създам платформа за всички артисти, така че никой да не бъде дискриминиран. „OTTO.” е безопасно място за развитие на всички в сферата на изкуството и културата. Място, на което всеки да развие потенциала си, контактите си и да бъде равноправен член на общността от таланти. От стартирането си „OTTO.” е платформа за сътрудничество и творчество, с широк спектър от възможности за всички видове артисти.“ – Итън Стоилов</p>
         </div>
 
     </div>
