--- a/static/pages/bg/artists.html
+++ b/static/pages/bg/artists.html
@@ -2,7 +2,7 @@
 
 <div class="w-full bg-white text-black" x-data="{sector:0} " apiData="Countries.get_countries">
     <div class="px-2">
-        <h2 class="text-base   text-center mt-12 lg:text-5xl ">
+        <h2 class="   text-center mt-8 pb-4 lg:mt-12  text-[1.4em] lg:text-5xl text-black ">
             <span class="font-bold">OTTO. </span>
             <span>Артисти</span>
         </h2>
