--- a/static/pages/bg/contacts.html
+++ b/static/pages/bg/contacts.html
@@ -1,17 +1,17 @@
 <div class="w-full bg-black ">
 
-    <h2 class="text-3xl text-white  text-center mt-12 sm:text-5xl ">
+    <h2 class="   text-center mt-8 pb-4 lg:mt-12  text-[1.4em] lg:text-5xl ">
         <span class="font-bold">OTTO.</span>
         <span>Контакти</span>
     </h2>
 
-    <div class="w-full lg:w-1/2 py-4 px-4 lg:px-0 lg:py-10 mx-auto text-justify">
+    <div class="w-full lg:w-1/2 py-4 px-4 lg:px-0 lg:py-10 mx-auto text-justify px-6">
         <p class="text-sm md:text-xl font-semibold mt-3">1. Обратна връзка и свързване с нас:</p>
-        <p class="text-xs md:text-base italic mt-2">Вашето мнение е важно за нас! Моля, споделете своите впечатления и предложения, за да можем да направим OTTO още по-добра платформа за вас. Свържете се с нас чрез контактната форма по-долу.</p>
+        <p class="text-xs md:text-base  mt-2">Вашето мнение е важно за нас! Моля, споделете своите впечатления и предложения, за да можем да направим OTTO още по-добра платформа за вас. Свържете се с нас чрез контактната форма по-долу.</p>
         <p class="text-sm md:text-xl font-semibold mt-8">2. Въпроси или технически проблеми:</p>
-        <p class="text-xs md:text-base italic mt-2">Имате въпроси или срещате технически проблеми? Нашият екип е тук, за да ви помогне! Моля, опишете проблема или въпроса си в контактната форма по-долу. Ще се постараем да отговорим възможно най-бързо.</p>
+        <p class="text-xs md:text-base  mt-2">Имате въпроси или срещате технически проблеми? Нашият екип е тук, за да ви помогне! Моля, опишете проблема или въпроса си в контактната форма по-долу. Ще се постараем да отговорим възможно най-бързо.</p>
         <p class="text-sm md:text-xl font-semibold mt-8">3. Спонсори и партньорства:</p>
-        <p class="text-xs md:text-base italic mt-2">Интересувате се от спонсорство или партньорство с OTTO? Ние сме винаги отворени за нови възможности за сътрудничество. Моля, свържете се с нас чрез контактната форма по-долу за повече информация.</p>
+        <p class="text-xs md:text-base  mt-2">Интересувате се от спонсорство или партньорство с OTTO? Ние сме винаги отворени за нови възможности за сътрудничество. Моля, свържете се с нас чрез контактната форма по-долу за повече информация.</p>
 
     </div>
 </div>
