--- a/static/pages/bg/partner.html
+++ b/static/pages/bg/partner.html
@@ -1,5 +1,5 @@
-<div class="mt-5">
-    <h2 class="text-base   text-center mt-12 md:text-5xl ">
+<div class="">
+    <h2 class="   text-center mt-8 pb-4 lg:mt-12  text-[1.4em] lg:text-5xl ">
         <span class="font-bold">OTTO.</span>
         <span>Бизнес портфолио</span>
     </h2>
