--- a/static/pages/bg/plans.html
+++ b/static/pages/bg/plans.html
@@ -1,9 +1,9 @@
 <section>
-    <div class="container max-w-full mx-auto lg:py-5 px-6">
+    <div class="container max-w-full mx-auto  px-6">
 
         <div class="" x-data="{plan : 1}">
             <div>
-                <h2 class="text-base   text-center mt-12  lg:text-5xl ">
+                <h2 class="   text-center mt-8 pb-4 lg:mt-12  text-[1.4em] lg:text-5xl ">
                     <span class="font-bold">OTTO. </span>
                     <span>Планове</span>
                 </h2>
@@ -22,7 +22,7 @@
                     <div class="flex-1">
                         <h3 class="text-lg lg:text-xl font-semibold ">Безплатен</h3>
                         <p class="mt-1 lg:mt-4 flex items-baseline ">
-                            <span class="text-base lg:text-5xl font-extrabold tracking-tight">$0</span><span class="ml-2 text-sm lg:text-xl font-semibold">/</span> <span class="ml-2 text-sm lg:text-xl font-semibold"> година</span>
+                            <span class="text-base lg:text-5xl font-extrabold tracking-tight">$0</span><span class="text-sm lg:text-xl font-semibold">/</span> <span class="text-sm lg:text-xl font-semibold">на година</span>
                         </p>
                         <!-- <p class="mt-6 ">You just want to discover</p> -->
                         <ul role="list" class="mt-6 space-y-4">
@@ -95,7 +95,7 @@
                         <p class="absolute top-0 py-1.5 px-4 bg-emerald-500 text-white rounded-full text-xs font-semibold uppercase tracking-wide  transform -translate-y-1/2">
                             Най-търсен</p>
                         <p class="mt-1 lg:mt-4 flex items-baseline ">
-                            <span class="text-base lg:text-5xl font-extrabold tracking-tight">240лв</span><span class="ml-2 text-sm lg:text-xl font-semibold">/</span> <span class="ml-2 text-sm lg:text-xl font-semibold"> година</span>
+                            <span class="text-base lg:text-5xl font-extrabold tracking-tight">240лв</span><span class="text-sm lg:text-xl font-semibold">./</span> <span class="text-sm lg:text-xl font-semibold">на година</span>
                         </p>
                         <!-- <p class="mt-6 ">You want to learn and have a personal assistant</p> -->
                         <ul role="list" class="mt-6 space-y-4">
@@ -197,9 +197,9 @@
             <div x-show="plan == 2" x-cloak x-transition:enter.duration.800ms x-transition:leave.duration.300ms class="mt-6 lg:mt-24 container space-y-12 lg:space-y-0 lg:grid lg:grid-cols-2 lg:gap-x-8">
                 <div class="relative p-4 lg:p-8  border border-gray-200 rounded-2xl shadow-sm flex flex-col max-w-[450px]">
                     <div class="flex-1">
-                        <h3 class="text-lg lg:text-xl font-semibold ">Бизнес Месечен</h3>
+                        <h3 class="text-lg lg:text-xl font-semibold ">Бизнес </h3>
                         <p class="mt-1 lg:mt-4 flex items-baseline ">
-                            <span class="text-base lg:text-5xl font-extrabold tracking-tight">240лв</span><span class="ml-2 text-sm lg:text-xl font-semibold">/</span> <span class="ml-2 text-sm lg:text-xl font-semibold">месец</span>
+                            <span class="text-base lg:text-5xl font-extrabold tracking-tight">240лв</span><span class="text-sm lg:text-xl font-semibold">./</span> <span class="text-sm lg:text-xl font-semibold">на месец</span>
                         </p>
                         <!-- <p class="mt-6 ">You just want to discover</p> -->
                         <ul role="list" class="mt-6 space-y-4">
@@ -280,7 +280,7 @@
                         <p class="absolute top-0 py-1.5 px-4 bg-emerald-500 text-white rounded-full text-xs font-semibold uppercase tracking-wide  transform -translate-y-1/2">
                             Най-търсен</p>
                         <p class="mt-1 lg:mt-4 flex items-baseline ">
-                            <span class="text-base lg:text-5xl font-extrabold tracking-tight">1440лв </span> <span class="ml-2 text-sm lg:text-xl font-semibold">/</span> <span class="ml-2 text-sm lg:text-xl font-semibold"> година</span>
+                            <span class="text-lg lg:text-6xl font-extrabold tracking-tight">1440лв </span> <span class="text-sm lg:text-xl font-semibold">./</span> <span class="text-sm lg:text-xl font-semibold">на година</span>
                         </p>
                         <!-- <p class="mt-6 ">You want to learn and have a personal assistant</p> -->
                         <ul role="list" class="mt-6 space-y-4">
