--- a/static/pages/bg/nova-stranica.html
+++ b/static/pages/bg/nova-stranica.html
@@ -1,4 +1,4 @@
-<div class="is-section is-box is-dark-text type-poppins box-autofit min-height-60 is-section-100 last-box">
+<div class="is-section is-box is-dark-text type-poppins box-autofit min-height-60 is-section-100 last-box scroll-target">
     <div class="is-overlay">
     </div>
     <div class="is-container v2 leading-13 size-17 is-content-1100">
@@ -21,6 +21,27 @@
                     <a href="#" role="button" class="transition-all inline-block whitespace-nowrap cursor-pointer no-underline border-2 border-solid mr-2 mt-2 mb-1 py-2 size-18 px-9 border-current hover:border-current font-normal leading-relaxed rounded-full tracking-wide" title="">Get in Touch</a>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="is-section is-box is-section-100 type-poppins box-autofit last-box">
+    <div class="is-overlay"></div>
+    <div class="is-container v2 leading-14 size-18 is-content-1360">
+
+        <div class="row relative sm-items-1">
+            <div class="py-6 flex flex-col justify-center items-start column">
+                <h1 class="leading-none font-normal size-76">We create simple and effective designs.</h1>
+                <div class="spacer height-40"></div>
+                <p style="max-width: 500px;">Our designs are carefully crafted to deliver maximum impact and simplicity. We believe that less is more, and our designs reflect that philosophy.</p>
+
+                <div class="spacer height-20"></div>
+
+                <div class="button-group">
+                    <a href="#" role="button" class="transition-all inline-block whitespace-nowrap cursor-pointer no-underline border-2 border-solid mr-2 mb-1 py-2 size-18 px-9 text-black leading-relaxed rounded-full border-transparent hover:border-transparent font-normal tracking-wide mt-3" title="" style="background-color: rgb(240, 240, 240);">Our Works</a>
+                    <a href="#" role="button" class="transition-all inline-block whitespace-nowrap cursor-pointer no-underline border-2 border-solid mr-2 mb-1 py-2 size-18 px-9 border-current hover:border-current font-normal leading-relaxed rounded-full tracking-wide mt-3" title="">Get in Touch</a>
+                </div>
+            </div>
+            <div class="flex flex-col justify-center items-center column"><img src="https://otto-artists.com/editor/cb/assets/templates-simple/images/img-010.jpg" alt="" data-filename="img-010.jpg"></div>
         </div>
     </div>
 </div>
