--- a/static/pages/bg/userpage.html
+++ b/static/pages/bg/userpage.html
@@ -715,7 +715,7 @@
                             <p class="text-gray-900 text-black text-base lg:text-2xl mb-1 font-medium title-font sm:col-span-2 text-black mt-10">Галерия </p>
                             <div class=" border-b border-black w-[150px]" apidata="User.get_portfolio_subtypes"></div>
                             <div class="grid grid-cols-2 lg:grid-cols-4 py-5 gap-2">
-                                <template x-for="image in data.my_portfolio.images">
+                                <template x-for="image in data.my_portfolio.images.reverse()">
                                     <div class="relative">
                                         <img :src="image.url" class="w-full aspect-square object-cover" alt="">
                                         <div class="absolute top-0 right-2">
@@ -922,7 +922,7 @@
                         <div>
                             <p class="text-base lg:text-2xl pt-10">Галерия </p>
                             <div class="grid grid-cols-2 lg:grid-cols-4 py-5 gap-2">
-                                <template x-for="image in data.my_bussiness_portfolio.images">
+                                <template x-for="image in data.my_bussiness_portfolio.images.reverse()">
                                     <div class="relative">
                                         <img :src="image.url" class="w-full aspect-square object-cover" alt="">
                                         <div class="absolute top-0 right-2">
