--- a/static/pages/bg/footer.html
+++ b/static/pages/bg/footer.html
@@ -2,7 +2,7 @@
     <div class="is-overlay"></div>
     <div class="is-container container v2 px-0">
 
-        <div class="flex md:justify-center justify-start">
+        <div class="flex justify-center ">
 
             <video @click="forceChange('/bg/')" class="w-[180px] lg:w-[230px]" autoplay="" muted="" loop="" playsinline="" preload="auto" controlslist="nodownload">
                 <source src="/editor/cb/assets/templates-simple/videos/file.mp4" type="video/mp4">
